основной сервис: Public События: GET/events